RESOLVED FIXED82043
TouchAdjustment does not correct for frame position
https://bugs.webkit.org/show_bug.cgi?id=82043
Summary TouchAdjustment does not correct for frame position
Allan Sandfeld Jensen
Reported 2012-03-23 04:02:18 PDT
When calculating distances the touch adjustment code compares the touch position in window coordinates, and element positions in frame coordinates.
Attachments
Patch (5.85 KB, patch)
2012-03-23 04:06 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-03-23 04:06:17 PDT
WebKit Review Bot
Comment 2 2012-03-23 05:26:41 PDT
Comment on attachment 133456 [details] Patch Clearing flags on attachment: 133456 Committed r111851: <http://trac.webkit.org/changeset/111851>
WebKit Review Bot
Comment 3 2012-03-23 05:26:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.