TouchAdjustment does not correct for frame position https://bugs.webkit.org/show_bug.cgi?id=82043

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-03-23
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Convert geometry to window coordinates before calculating distance.

Test: touchadjustment/iframe.html

* page/TouchAdjustment.cpp:
(WebCore::TouchAdjustment::distanceSquaredToTargetCenterLine):

LayoutTests:

Add test that will fail if frame position is not adjusted for.

* touchadjustment/iframe-expected.txt: Added.
* touchadjustment/iframe.html: Added.
* touchadjustment/resources/inner-frame.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@111851 bbb929c8-8fbe-4397-9dbb-9b2b20218538